--- a/StockPredictorAndDisplay/packages.config
+++ b/StockPredictorAndDisplay/packages.config
@@ -15,9 +15,17 @@
   <package id="LiveCharts.Wpf.NetCore3" version="0.9.8" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Numerics" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Data.Sqlite" version="9.0.1" targetFramework="net472" />
   <package id="Microsoft.Data.Sqlite.Core" version="9.0.1" targetFramework="net472" />
+  <package id="Microsoft.ML" version="4.0.1" targetFramework="net48" />
+  <package id="Microsoft.ML.CpuMath" version="4.0.1" targetFramework="net48" />
+  <package id="Microsoft.ML.DataView" version="4.0.1" targetFramework="net48" />
+  <package id="Microsoft.ML.FastTree" version="4.0.1" targetFramework="net48" />
+  <package id="Microsoft.ML.Mkl.Redist" version="4.0.1" targetFramework="net48" />
+  <package id="Microsoft.ML.TimeSeries" version="4.0.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="SkiaSharp.NativeAssets.macOS" version="3.116.1" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.1.10" targetFramework="net472" />
   <package id="SQLitePCLRaw.core" version="2.1.10" targetFramework="net472" />
@@ -25,12 +33,17 @@
   <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.1.10" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
+  <package id="System.CodeDom" version="8.0.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net48" />
   <package id="System.Data.SQLite" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Memory" version="4.6.0" targetFramework="net472" />
+  <package id="System.Numerics.Tensors" version="8.0.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="8.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net472" />
 </packages>
